Added controls and logs on data management
