# myproject-api/src/main/java/net/andresbustamante/myproject/api/services/StaffManagementService.java
@@ -1,8 +1,10 @@
 package net.andresbustamante.myproject.api.services;
 
+import net.andresbustamante.myproject.api.exceptions.ApplicationException;
 import net.andresbustamante.myproject.api.model.StaffCreationDto;
+import net.andresbustamante.myproject.api.util.UserContext;
 
 public interface StaffManagementService {
 
-    short createStaff(StaffCreationDto address);
+    short createStaff(StaffCreationDto address, UserContext ctx) throws ApplicationException;
 }
